kubernetes-security/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homework
