kubernetes-security/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: monitoring
      containers:
        - name: nginx
          image: nginx:stable
          volumeMounts:
            - mountPath: /homework
              name: homework
            - mountPath: /etc/nginx/conf.d/
              name: nginx-conf
            - mountPath: /homework/conf
              name: homework-conf
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - KUBERAPI=https://kubernetes.default.svc
                  - SA=/var/run/secrets/kubernetes.io/serviceaccount
                  - CACERT=${SA}/ca.crt
                  - TOKEN=$(cat ${SA}/token)
                  - NAMESPACE=$(cat ${SA}/namespace)
                  - |
                    curl --cacert ${CACERT} \
                    -H "Authorization: Bearer ${TOKEN}" \
                    -X GET \
                    "${KUBERAPI}/metrics" > /homework/metrics.html
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - rm /homework/index.html
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
              httpHeaders:
                - name: HTTP
                  value: "200"
            initialDelaySeconds: 5
            periodSeconds: 15
      tolerations:
        - key: "homework"
          operator: "Equal"
          value: "true"

      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: homework-conf
          configMap:
            name: homework-conf
        - name: homework
          persistentVolumeClaim:
            claimName: pvc1
